@@ -12,9 +12,10 @@ METCollectionName MET_RefFinal_AntiKt4EMTopo
 LooseMETCollectionName MET_Reference_AntiKt4EMTopo
 
 TruthCollectionName TruthParticles
+#TruthEventCollectionName TruthEvents
 TruthJetCollectionName AntiKt4TruthJets
 TopPartonHistory ttbar
-PDFInfo False
+PDFInfo True
 
 #ObjectSelectionName top::ObjectLoaderStandardCuts
 ObjectSelectionName ttHMultileptonLooseObjectLoader
@@ -39,7 +40,12 @@ TauJetIDBkg None
 TruthBlockInfo True
 
 # Don't be clever
+SELECTION dummy
+TRIGDEC HLT_mu26_imedium
+
 SELECTION loose
 INITIAL
+#TRIGDEC HLT_mu26_imedium 
+#TRIGMATCH HLT_mu26_imedium 
 TTHMULTILEP
 SAVE
